$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-01-10 [O] Added heredoc to install.php and cleaned up code {Paver}
2009-01-10 [C] Corrected non Internationalized string in jquery.sort.js {Frantz}
2009-01-10 [C] Fixed typo in french.php and corrected the file accordingly to the english.php {Frantz} 
2009-01-10 [B] Fixed missing 'abbr' field for languages table in basic.sql {Paver}
2009-01-09 [O] Cleaned up album/picture manager and language files {Paver}
2009-01-08 [A] Added language keys for admin tool to convert keyword separator {Paver}
2009-01-08 [A] Added config option for batch add process limit {Nibbler}
2009-01-08 [A] Added config option for number of comments per page {Nibbler}
2009-01-08 [A] Added plugin hook 'theme_img_navbar' to function theme_html_img_nav_menu {Paver}
2009-01-07 [B] Fixed upload_choices plugin hook in upload.php to work with multiple plugins {Paver}
2009-01-07 [A] Added plugin hook to theme_display_thumbnails in theme engine & core themes {Paver}
2009-01-07 [B] Set default value for $admin_menu in theme engine to allow for error in theme_admin_mode_menu {Paver}
2009-01-07 [D] Changed documentation link in admin menu to localized version if available {GauGau}
2009-01-06 [B] Use the right keyword separator when reading IPTC keyword info {Nibbler}
2009-01-06 [B] Fixed "'Minimum number of votes for a file to appear in the 'top-rated' list' is one step too low" issue (thread ID 57462) {Nibbler}
2009-01-06 [C] Added message styles to core functions (thread ID 57133) {GauGau}